# dbus-rust-thing

./: Cargo.toml
src/: main.rs  proxy_profile.rs
src/components/: mod.rs  profile_component.rs
src/dbus_proxy/: aura.rs  mod.rs  profile.rs
