[package]
name = "rust-dbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core library
relm4 = "0.6.2"
# Optional: reusable components
relm4-components = "0.6.2"
# Optional: icons
relm4-icons = { version = "0.6.0", features = ["plus"] }
zbus = "3.14.1"
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.13.0", features = ["full"] }